# duva

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  TODO  _config.yml  docker-compose.yaml  dump.md  dump.rdb  duva-cli.hist  duva.tp  log_setup.sh  nodes  otel-collector-config.yaml  run.sh  rustfmt.toml  scripts.sh  test_test_save_dump_1738734276561922000.rdb
.config/: nextest.toml
duva/: Cargo.toml  Dockerfile
duva-client/: Cargo.toml  Dockerfile
duva-client/src/: broker.rs  cli_input.rs  command.rs  controller.rs  lib.rs  observability.rs  server_streams.rs
duva-client/src/broker/: input_queue.rs  leader_connections.rs  mod.rs  node_connections.rs  read_stream.rs  write_stream.rs
duva-client/src/cli/: cli.rs  completion.rs  editor.rs  main.rs  output_render.rs
duva-client/src/cli/editor/: completion.rs  hints.rs  mod.rs
duva/benches/: benchmark.rs  benchmark_cache_db.rs  benchmark_query.rs
duva/src/: actor_registry.rs  config.rs  init.rs  lib.rs  macros.rs  main.rs  signals.rs  types.rs
duva/src/adapters/: mod.rs
duva/src/adapters/io/: tokio_stream.rs
duva/src/adapters/loggers/: disk_based.rs  memory_based.rs  mod.rs  op_logs.rs
duva/src/adapters/op_logs/: disk_based.rs  memory_based.rs
duva/src/adapters/wal/: local_wal.rs
duva/src/clients/: authentications.rs  mod.rs  utils.rs
duva/src/domains/: error.rs  interface.rs  mod.rs  query_io.rs
duva/src/domains/append_only_files/: log.rs  logger.rs
duva/src/domains/caches/: actor.rs  cache_db.rs  cache_manager.rs  cache_objects.rs  command.rs  lru_cache.rs  mod.rs  read_queue.rs  service.rs
duva/src/domains/caches/cache_db/: cache_node.rs  entry.rs  iter.rs  tests.rs
duva/src/domains/caches/cache_objects/: entry.rs  mod.rs  value.rs
duva/src/domains/cluster_actors/: actor.rs  command.rs  hash_ring.rs  heartbeat_scheduler.rs  listener.rs  mod.rs  queue.rs  replication.rs  service.rs  session.rs  topology.rs
duva/src/domains/cluster_actors/actor/: client_sessions.rs  heartbeat_scheduler.rs
duva/src/domains/cluster_actors/commands/: cluster_actor_command.rs  command.rs  election.rs  mod.rs  peer_listener_command.rs  types.rs  write_con.rs
duva/src/domains/cluster_actors/consensus/: election.rs  log.rs  mod.rs
duva/src/domains/cluster_actors/hash_ring/: hash_func.rs  migration_task.rs
duva/src/domains/cluster_actors/heartbeats/: heartbeat.rs  scheduler.rs
duva/src/domains/cluster_actors/peer_connections/: mod.rs
duva/src/domains/cluster_actors/tests/: cluster_managements.rs  elections.rs  mod.rs  partitionings.rs  replications.rs
duva/src/domains/config_actors/: actor.rs  command.rs  config_manager.rs  mod.rs  service.rs
duva/src/domains/operation_logs/: interfaces.rs  logger.rs  mod.rs  operation.rs
duva/src/domains/peers/: cluster_peer.rs  command.rs  connected_peer_info.rs  connected_types.rs  identifier.rs  listener.rs  mod.rs  peer.rs  service.rs
duva/src/domains/peers/connections/: connected_peer_info.rs  connected_types.rs  connection_types.rs  mod.rs
duva/src/domains/query_parsers/: mod.rs  query_io.rs
duva/src/domains/replications/: logger.rs  messages.rs  mod.rs  operation.rs  replication.rs  state.rs
duva/src/domains/replications/consensus/: election.rs  log.rs  mod.rs
duva/src/domains/replications/operation_logs/: interfaces.rs  logger.rs  mod.rs
duva/src/domains/saves/: actor.rs  command.rs  mod.rs  service.rs
duva/src/domains/saves/endec/: decoder.rs  encoder.rs  mod.rs
duva/src/domains/saves/snapshot/: mod.rs  snapshot_loader.rs
duva/src/presentation/: mod.rs
duva/src/presentation/clients/: authenticate.rs  controller.rs  mod.rs  parser.rs  request.rs  stream.rs
duva/src/presentation/clients/controllers/: acceptor.rs  authenticate.rs  handler.rs  mod.rs
duva/src/presentation/clusters/: communication_manager.rs  connection_manager.rs  mod.rs
duva/src/presentation/clusters/inbound/: stream.rs
duva/src/presentation/clusters/listeners/: listener.rs  mod.rs
duva/src/services/: interface.rs
duva/src/services/handlers/: cache.rs  cluster.rs  mod.rs  save.rs
duva/tests/: common.rs  test_cluster_forget_makes_all_nodes_forget_target_node.rs  test_cluster_forget_when_wrong_id_given.rs  test_cluster_known_nodes_increase_when_new_replica_is_added.rs  test_config_get_dir.rs  test_del.rs  test_exists.rs  test_keys.rs  test_lazy_discovery.rs  test_leader_election.rs  test_mods.rs  test_raft_happy_case.rs  test_removes_node_when_heartbeat_is_not_received_for_certain_time.rs  test_set_get.rs  test_sync.rs
duva/tests/client_ops/: mod.rs  test_append.rs  test_config_get_dir.rs  test_decr.rs  test_decrby.rs  test_del.rs  test_discover_leader.rs  test_exists.rs  test_idempotent_client.rs  test_incr.rs  test_incrby.rs  test_keys.rs  test_lindex.rs  test_llen.rs  test_lpop.rs  test_lpush.rs  test_lpushx.rs  test_lrange.rs  test_lset.rs  test_ltrim.rs  test_removed_connection.rs  test_removed_leader_connection_with_replica.rs  test_removed_leader_connection_without_replica.rs  test_replication_info.rs  test_route_del.rs  test_route_exists.rs  test_route_keys.rs  test_route_mget.rs  test_rpop.rs  test_rpush.rs  test_rpushx.rs  test_set_get.rs  test_snapshot_persists_and_recovers_state.rs  test_ttl.rs  test_type.rs
duva/tests/cluster_ops/: mod.rs  test_cluster_forget_makes_all_nodes_forget_target_node.rs  test_cluster_forget_when_wrong_id_given.rs  test_cluster_known_nodes_increase_when_new_replica_is_added.rs  test_cluster_meet.rs  test_disseminate_peers.rs  test_heartbeat.rs  test_lazy_discovery.rs  test_reconnection_on_reboot.rs  test_removes_node_when_heartbeat_is_not_received_for_certain_time.rs
duva/tests/replication_ops/: mod.rs  test_leader_election.rs  test_leader_election_twice.rs  test_raft_happy_case.rs  test_set_twice_after_election.rs  test_sync.rs
(+537 files in other folders)
