[package]
name = "duva-client"
version = "0.1.0"
edition = "2024"

[dependencies]
duva = { path = "../duva" }
clap = { version = "*", features = ["derive"] }
rustyline = { version = "15.0.0", features = [
    "rusqlite",
    "with-sqlite-history",
    "derive",
] }

crossterm = "0.29.0"
figlet-rs = "0.1.5"


[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = ["cli"]
# cargo run -p duva-client --bin cli -- --port 6000


[features]
cli = [] # Define a feature for the CLI binary
