[package]
name = "duva-client"
version = "0.1.0"
edition = "2024"

[dependencies]
duva = { path = "../duva" }
clap = { version = "*", features = ["derive"] }
rustyline = { version = "15.0.0", features = [
    "rusqlite",
    "with-sqlite-history",
    "derive",
] }

crossterm = "0.29.0"
figlet-rs = "0.1.5"


[[bin]]
name = "cli"
path = "src/cli/main.rs"
# cargo run -p duva-client -- --port 6000
