# DON'T EDIT THIS!
[package]
name = "duva"
version = "0.1.0"
authors = ["Migorithm <saka90030@gmail.com>"]
edition = "2024"


# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.97"                                                           # error handling
bytes = "1.10.1"                                                            # helps manage buffers
thiserror = "2.0.12"                                                        # error handling
tokio = { version = "1.44.2", features = ["full"] }
rand = { version = "0.9.0", features = ["std"] }
futures = "0.3.31"                                                          # async networking
memmap2 = "0.9.5"                                                           # memory mapping
chrono = "0.4.40"
bincode = { version = "2.0.1" }                                             # serialization
uuid = { version = "1.16.0", features = ["v7"] }                            # unique id generation
memchr = "2.7.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"


opentelemetry = { version = "0.31", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.31", default-features = false }

signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3"

async-trait = "0.1.88"      # async trait support
lzf = { version = "1.0.0" }

[dev-dependencies]
tempfile = "3.19.1"
criterion = "0.7.0"

[[bench]]
name = "benchmark"
harness = false
